--- a/client/src/GamePage.scss
+++ b/client/src/GamePage.scss
@@ -5,19 +5,9 @@
 }
 
 .waiting-page {
-  margin: 10% auto;
-
-  input {
-    margin: 0px 24px;
-    width: 8em;
-    height: 3em;
-    font-size: 1.25em;
-    border-radius: 1em;
-    box-shadow: 2px 2px 6px 0px #666666;
-    border: 2px solid #444444;
-
-    &:hover {
-      background-color: #dddddd;
-    }
-  }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5%;
 }
