--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,9 +1,14 @@
-$link-colour: #61dafb;
+$link-colour: #5fb8ad;
 
-$button-bg: #98b4de;
+$button-bg: #1a3c8b;
 $border-colour: #23002e;
 
-$bg-colour: #fbeeff;
+$bg-colour: #efefef;
 $font-colour: #23002e;
+
+$event: #c8e6ce;
+$theme: #9fc4de;
+$thing: #f7f1bf;
+$inhabitant: #f2acac;
 
 // Card Colours:
