--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,14 +1,14 @@
 $link-colour: #5fb8ad;
 
 $button-bg: #1a3c8b;
+$room-info: #5280bf;
 $border-colour: #23002e;
 
 $bg-colour: #efefef;
 $font-colour: #23002e;
 
+// Card Colours:
 $event: #c8e6ce;
 $theme: #9fc4de;
 $thing: #f7f1bf;
 $inhabitant: #f2acac;
-
-// Card Colours:
