--- a/client/src/GamePage/RoomInfo.scss
+++ b/client/src/GamePage/RoomInfo.scss
@@ -2,24 +2,29 @@
 
 .room-info {
   position: absolute;
-  top: 32%;
-  left: -13.5em;
-  width: 8em;
-  padding: 3em;
+  top: 0;
+  right: 0;
+  width: 16em;
+  padding: 8px;
 
   border: 4px solid $border-colour;
   border-radius: 32px;
-  background-color: $button-bg;
+  background-color: $theme;
 
-  transition: left 1s;
+  transition: max-height 1s;
+  transition: background-color 0.2s;
   cursor: pointer;
 
   .room-name {
     font-size: 24px;
     margin-bottom: 24px;
   }
+
+  &:hover {
+    background-color:#9fc4de55;
+  }
 }
 
-.opened {
-  left: 0px;
-}
+// .opened {
+//   top: -16px;
+// }
